fix alignment problem

--- a/src/Pages/layout.css
+++ b/src/Pages/layout.css
@@ -26,7 +26,7 @@ body {
 }
 
 .centered-content {
-    text-align: center;
+    justify-content: center;
 }
 
 .blue-france {
